--- a/src/main/resources/i18n-group/zh_CN.yml
+++ b/src/main/resources/i18n-group/zh_CN.yml
@@ -36,8 +36,31 @@ CM_MODE_DELETE: |-
   删除
 CM_MODE_FORWARD_AND_DELETE: |-
   复制与删除
-AS_ALERT: |-
-  提示 {}, 一段时间内的第一条消息不允许为文本.
+MENU_ANTI_SPAM: |-
+  反广告
+AS_INFO: |-
+  简易的反广告功能, 没有 ML OCR 关键字和黑名单, 但是基本能用.
+SIMPLE_AS_INFO: |-
+  简易反广告处理
+
+  **目前规则如下**
+  - 忽略非第一条的发言
+  + 不计算服务消息
+  + 计算第一条消息三分钟以内所有消息
+
+  **关于第一条消息检测**
+  - 如果您将 @{} 设为了群组管理员:
+    + 将直接搜索该用户的历史消息
+    + 举报违规消息并删除所有历史消息
+  - 否则:
+    + 接收到机器人加群后的第一条消息后标记为已发言
+    - 仅处理接收到的消息
+
+  **消息内容处理**
+  - 如果为可执行文件或压缩包 -> 判定
+  - 如果为名片 -> 判定
+  - 如果为转发, 且没有文本或包含多个 Emoji -> 判定
+  - asd
 SW_INLIST: |
   {} 在 @SpamWatch 封锁列表中:
 
@@ -46,8 +69,6 @@ SW_INLIST: |
 MODES: 忽略|禁言|封锁|移除
 REPORT: |-
   反馈
-REPORT_BOT_CHECK: |-
-  这不是机器人
 
 FN_MISSING_ACTION: 缺少参数名.
 FN_UNKNOWN_ACTION: 未知参数.
