--- a/src/main/resources/i18n-group/zh_CN.yml
+++ b/src/main/resources/i18n-group/zh_CN.yml
@@ -39,7 +39,11 @@ CM_MODE_FORWARD_AND_DELETE: |-
 MENU_ANTI_SPAM: |-
   反广告
 AS_INFO: |-
-  简易的反广告功能, 没有 ML OCR 关键字和黑名单, 但是基本能用.
+  简易的反广告功能, 没有内置 机器学习 / OCR / NLP 和黑名单, 但是基本能用.
+MENU_AS_SIMPLE: |-
+  简易反垃圾规则
+MENU_SPAM_WARCH: |-
+  Spam Watch 黑名单检查
 SIMPLE_AS_INFO: |-
   简易反广告处理
 
@@ -57,18 +61,37 @@ SIMPLE_AS_INFO: |-
     - 仅处理接收到的消息
 
   **消息内容处理**
-  - 如果为可执行文件或压缩包 -> 判定
-  - 如果为名片 -> 判定
-  - 如果为转发, 且没有文本或包含多个 Emoji -> 判定
-  - asd
+  + 如果为可执行文件或压缩包 -> 判定
+  + 如果为名片 -> 判定
+  + 如果为转发, 且没有文本或包含多个 Emoji -> 判定
+  + 如果不为纯文本 -> 仅删除
+
+  **关于消息删除**
+  + 删除后用户将被标记为未发言
+
+  您可以选择命中该检查时执行的动作:
+SW_INFO: |-
+  @SpamWatch 是知名的中心化广告黑名单, 如果您启用该接口, 则机器人将会在用户第一次发言时向该方请求检查.
+
+  您可以选择命中该检查时执行的动作:
 SW_INLIST: |
-  {} 在 @SpamWatch 封锁列表中:
+  {} 在 SpamWatch 封锁列表中:
 
   原因: {}
   执行: {}
-MODES: 忽略|禁言|封锁|移除
+MODES: 不处理|忽略|禁言|封锁|移除
 REPORT: |-
   反馈
+MENU_DELETE_SERVICE_MESSAGES: |-
+  服务消息管理
+DSM_INFO: |-
+  您可以配置本机器人以选择性或删除所有服务消息在您的群组中.
+DSM_JOIN_BY_LINK_ONLY: |-
+  仅删除通过链接加入
+DSM_USER_ABOUT: |-
+  删除成员相关
+DSM_DEL_ALL: |-
+  删除所有
 
 FN_MISSING_ACTION: 缺少参数名.
 FN_UNKNOWN_ACTION: 未知参数.
