--- a/src/main/resources/i18n-group/zh_CN.yml
+++ b/src/main/resources/i18n-group/zh_CN.yml
@@ -53,7 +53,7 @@ SIMPLE_AS_INFO: |-
   + 计算第一条消息三分钟以内所有消息
 
   **关于第一条消息检测**
-  - 如果您将 @{} 设为了群组管理员:
+  - 如果用户代理可用:
     + 将直接搜索该用户的历史消息
     + 举报违规消息并删除所有历史消息
   - 否则:
@@ -72,6 +72,25 @@ SIMPLE_AS_INFO: |-
   另, 可以订阅 @TdBotProject 获得规则更新通知 :)
 
   您可以选择命中该检查时执行的动作:
+MENU_USER_AGENT: |-
+  配置用户代理
+UA_INFO: |-
+  **关于用户代理**
+  用户代理用于访问机器人无法访问的接口, 如:
+    - 删除用户所有消息
+    - 举报消息
+    - 搜索用户历史发言
+    - 等...
+  如果您将本项目之用户代理设为群组管理员, 则附加功能可用.
+  由于用户加入的群组有上限以及暂未实现多代理, 您需要向我们 [申请]({}) 使用用户代理.
+
+  {}
+UA_UNCONFIGURED: |-
+  状态: 当前实例未配置用户代理
+UA_AVAILABLE: |-
+  目前用户代理公开, 您可以自行邀请 @{}.
+UA_REQUEST_REQUIRED: |-
+  目前用户代理
 SW_INFO: |-
   @SpamWatch 是知名的中心化广告黑名单, 如果您启用该接口, 则机器人将会在用户第一次发言时向该方请求检查.
 
