Update buttons ui

--- a/src/main/resources/i18n-group/zh_CN.yml
+++ b/src/main/resources/i18n-group/zh_CN.yml
@@ -109,7 +109,7 @@ DSM_DEL_ALL: |-
 MENU_MEMBER_POLICY: |-
   成员规则
 MP_INFO: |-
-  您可通过此功能禁止用户加入您频道的讨论群, 或要求评论前必须加入.
+  您可通过此功能禁止用户加入您频道的讨论群, 或要求评论前必须加入 (提示后删除发言, 并定时删除).
 MP_KICK: |-
   移除新成员
 MP_REQUIRE_JOIN: |-
