--- a/src/main/resources/i18n-group/en_US.yml
+++ b/src/main/resources/i18n-group/en_US.yml
@@ -29,7 +29,7 @@ MENU_CM_HELP: |-
 
   Repost and delete: delete after forwarding, that is, keep the message and disable the comment button.
 CM_MODE_UNPIN: |-
-  UNpin
+  Unpin
 CM_MODE_DELETE: |-
   Delete
 CM_MODE_REPOST_AND_DELETE: |-
